--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@
 <link rel="preconnect" href="https://ccmjs.github.io">
 
 <style>html, body, body * { margin: 0; height: 100%; }</style>
-<script src="https://modularcms.github.io/modularcms-components/cms_rollout/versions/ccm.cms_rollout-1.0.0.js"></script>
+<script src="https://modularcms.github.io/modularcms-components/cms_rollout/versions/ccm.cms_rollout-1.0.0.min.js"></script>
 <ccm-cms_rollout-1-0-0></ccm-cms_rollout-1-0-0>
